--- a/Recipe/package.json
+++ b/Recipe/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^6.0.0",
     "bootstrap": "3.3.7",
     "core-js": "^2.5.4",
+    "firebase": "^7.14.3",
     "rxjs": "6.0.0",
-    "rxjs-compat": "^6.1.0",
+    "rxjs-compat": "6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
