--- a/pipes-start/package.json
+++ b/pipes-start/package.json
@@ -22,15 +22,15 @@
     "@angular/router": "^6.0.0",
     "bootstrap": "3.3.7",
     "core-js": "^2.5.4",
-    "firebase": "^5.0.3",
     "rxjs": "6.0.0",
-    "rxjs-compat": "6.1.0",
+    "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular/cli": "~6.0.0",
     "@angular/compiler-cli": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.0",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -45,7 +45,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^2.7.2"
+    "tslint": "~5.9.1"
   }
 }
